src/test/ui/rfcs/rfc-2627-raw-dylib/link-ordinal-too-large.stderr
warning: the feature `raw_dylib` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/link-ordinal-too-large.rs:1:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #58713 <https://github.com/rust-lang/rust/issues/58713> for more information

error: ordinal value in `link_ordinal` is too large: `18446744073709551616`
  --> $DIR/link-ordinal-too-large.rs:6:5
   |
LL |     #[link_ordinal(18446744073709551616)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the value may not exceed `usize::MAX`

error: aborting due to previous error; 1 warning emitted

